daemon_set/nginx_daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginx-daemon-set
  namespace: daemon-ns
spec:
  selector:
    matchLabels:
      app: nginx-daemon
      env: test
  template:
    metadata:
      labels:
        app: nginx-daemon
        env: test
    spec:
      containers:
        - name: nginx
          image: nginx:1.18
          ports:
            - containerPort: 80
          command:
            - /bin/sh
            - -c
            - |
              echo "You have been served by Pod running on Node with IP address: $(NODE_IP)" > /usr/share/nginx/html/index.html
              nginx -g "daemon off;"
