daemon_set/daemon_headless_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: daemon-headless
  namespace: daemon-ns
spec:
  selector:
    app: nginx-daemon
    env: test
  clusterIP: None
  ports:
    - port: 3011
      protocol: TCP
      targetPort: 80
