daemon_set/ingress_obj.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-obj
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: daemon-headless
                port:
                  # match with port service
                  number: 3011
